Renombrar archivos y quitar importaciones sin usar

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,6 @@
 sonar.organization=felipem4398-github
 sonar.projectKey=FelipeM4398_RESTful-API-Authentication
+sonar.exclusions=knexfile.js, knex.js
 sonar.sources=src/
 sonar.tests=test/
 sonar.javascript.jstest.reportsPath=coverage
