Editar sonar-project.properties

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,8 +1,8 @@
 sonar.organization=felipem4398-github
 sonar.projectKey=FelipeM4398_RESTful-API-Authentication
-sonar.exclusions=knexfile.js, knex.js
+sonar.exclusions=src/config/db/knexfile.js
 sonar.sources=src/
 sonar.tests=test/
-sonar.javascript.jstest.reportsPath=coverage
-sonar.javascript.lcov.reportPath=coverage/lcov.info
+sonar.scm.forceReloadAll=true
+sonar.javascript.lcov.reportPaths=coverage/lcov.info
 sonar.sourceEncoding=UTF-8
