Editar sonar-project.properties

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,6 +3,6 @@ sonar.projectKey=FelipeM4398_RESTful-API-Authentication
 sonar.exclusions=knexfile.js, knex.js
 sonar.sources=src/
 sonar.tests=test/
-sonar.javascript.jstest.reportsPath=coverage
-sonar.javascript.lcov.reportPath=coverage/lcov.info
+sonar.scm.forceReloadAll=true
+sonar.typescript.lcov.reportPaths=coverage/lcov.info
 sonar.sourceEncoding=UTF-8
