--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bcrypt": "^4.0.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "helmet": "^3.22.0",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.20.13",
     "morgan": "^1.10.0",
@@ -34,6 +35,7 @@
     "@types/chai-http": "^4.2.0",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.5",
+    "@types/helmet": "0.0.45",
     "@types/jsonwebtoken": "^8.3.9",
     "@types/mocha": "^7.0.2",
     "@types/morgan": "^1.9.0",
