--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "restful_api_authentication",
   "version": "1.0.0",
   "description": "RESTful API Authetication",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/FelipeM4398/RESTful-API-Authentication.git"
+  },
   "main": "index.js",
   "scripts": {
     "dev": "nodemon src/index.ts",
@@ -18,11 +22,14 @@
   "dependencies": {
     "bcrypt": "^4.0.1",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "express": "^4.17.1",
     "helmet": "^3.22.0",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.20.13",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.4.6",
+    "nodemailer-express-handlebars": "^4.0.0",
     "objection": "^2.1.3",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
@@ -39,6 +46,7 @@
     "@types/jsonwebtoken": "^8.3.9",
     "@types/mocha": "^7.0.2",
     "@types/morgan": "^1.9.0",
+    "@types/nodemailer": "^6.4.0",
     "@types/passport": "^1.0.3",
     "@types/passport-jwt": "^3.0.3",
     "@types/pg": "^7.14.3",
