--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -29,6 +29,7 @@ jobs:
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: "my-first-app-auth" #Must be unique in Heroku
+          buildpack: "nodejs"
           dontuseforce: true
           heroku_email: "luisf4398@hotmail.com"
           appdir: "dist"
