Update and rename .github/workflows/nodejs.yml to  .github/ workflows/nodejs.yml

--- a/.github/ workflows/nodejs.yml
+++ b/.github/ workflows/nodejs.yml
@@ -30,6 +30,4 @@ jobs:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: "my-first-app-auth" #Must be unique in Heroku
           buildpack: "heroku/nodejs"
-          dontuseforce: true
-          heroku_email: "luisf4398@hotmail.com"
-          appdir: "dist"
+          heroku_email: "luisf4398@hotmail.com
