--- a/.github/ workflows/nodejs.yml
+++ b/.github/ workflows/nodejs.yml
@@ -28,6 +28,5 @@ jobs:
       - uses: akhileshns/heroku-deploy@v3.0.4 # This is the action
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: "my-first-app-auth" #Must be unique in Heroku
-          buildpack: "heroku/nodejs"
+          heroku_app_name: "my-first-app-auth"
           heroku_email: "luisf4398@hotmail.com
