--- a/.github/ workflows/nodejs.yml
+++ b/.github/ workflows/nodejs.yml
@@ -29,5 +29,5 @@ jobs:
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: "my-first-app-auth"
-          heroku_email: "luisf4398@hotmail.com
+          heroku_email: "luisf4398@hotmail.com"
           usedocker: true
